# agenix-sh

./: .gitignore  AMD64_MIGRATION.md  CLAUDE.md  Cargo.toml  chart-data.csv  dataset.jsonl  debug_payload.sh  submit_job.py  tinker_config.json  verify_agw.sh
.github/workflows/: release.yml
agenix/: CONTRIBUTING.md  install.sh
agenix/.claude/: README.md
agenix/docs/: get-started.md  intro.md
agenix/specs/: README.md  (+3 more)
agw/: Cargo.toml
agx/: Cargo.toml
agx-eval/: .gitignore  CLAUDE.md  Cargo.toml  README.md
agx-eval/src/: lib.rs  llm.rs  main.rs  parser.rs  prompt.rs
agx-eval/tests/: integration_test.rs
agx-ocr/: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.dgx  README.md  build-dgx.sh  download-model.sh  test.sh
agx-ocr/.cargo/: config.toml
agx-ocr/.github/workflows/: add-to-roadmap.yml
agx-ocr/agenix-shared/docs/zero-trust/: zero-trust-execution.md
agx-ocr/agenix-shared/scripts/: agenix_multi_repo_summary.sh
agx-ocr/docs/: CHART_EXTRACTION_AND_PROMPTS.md  CONTRACT.md  DGX_SPARK_BUILD_GUIDE.md  DGX_SPARK_SUMMARY.md  DGX_SPARK_TARGET.md  MODEL_INFO.md  MODEL_SETUP.md  POC_SUMMARY.md  PROMPT_FEATURE_SUMMARY.md  README.md  USAGE.md
agx-ocr/prompts/: README.md  chart-to-json.txt  table-to-structured.txt
agx-ocr/src/: describe.rs  main.rs  model.rs  ocr.rs  types.rs
agx-ocr/test-assets/: README.md
agx-ocr/tests/: basic.rs
deepseek-ocr.rs/: README_CN.md
experiments/: run_experiments.py
research/: domains.yaml  model_selection.md  raw_candidates.jsonl  synthetic_data_pipeline.md  train_delta.jsonl  train_delta_chat_tinker.jsonl  train_echo.jsonl  train_echo_chat.jsonl  verification_failures.jsonl  verified_dataset.jsonl
scripts/: debug_api.py  fix_jsonl.py  inference_local.sh  prepare_local_model.py  setup_dgx.sh  simple_inference.py  synth_format.py  synth_gen.py  synth_gen_echo.py  synth_verify.py  test_echo_tinker.py  tinker_train.py  tinker_train_v2.py  train.py  train_local.sh  validate_jsonl.py
training/: README.md  axolotl.yaml
workflows/: fine_tune.md
(+108 files in other folders)
