[package]
name = "agx-eval"
version = "0.1.0"
edition = "2021"
authors = ["AGEniX Contributors"]
description = "Generic LLM evaluation Agentic Unit for AGEniX"
repository = "https://github.com/agenix-sh/agx-eval"
license = "MIT OR Apache-2.0"
keywords = ["agenix", "llm", "evaluation", "agentic-unit"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
proptest = "1"

[[bin]]
name = "agx-eval"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
